--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-transform-es2015-arrow-functions": "6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "6.23.0",
     "babel-plugin-transform-es2015-destructuring": "6.23.0",
-    "babel-plugin-transform-es2015-parameters": "6.23.0"
+    "babel-plugin-transform-es2015-parameters": "6.23.0",
+    "babel-plugin-transform-es2015-spread": "6.22.0"
   }
 }
