--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "transform-es2015-parameters",
     "transform-es2015-block-scoping",
     "transform-es2015-arrow-functions",
-    "transform-es2015-destructuring"
+    "transform-es2015-destructuring",
+    "transform-es2015-spread"
   ]
 }
